--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
 <body>
     <main>
        <section class="sedans">
-        <img src="" alt="">
+        <img src="./imagens/icon-sedans.svg" alt="carro sedan">
         <h2>Sedans</h2>
+        <p>Escolha um sedan pelo seu preço acessível e excelente economia de combustível. Ideal para dirigir na cidade ou na sua próxima viagem.</p>
+        <a href="Ver mais"></a>
+        
 
        </section>
 
        <section class="suvs">
         <img src="" alt="">
+        <h2>SUVs</h2>
+        <p></p>
+        <a href=""></a>
 
        </section>
 
        <section class="luxuosos">
         <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <a href=""></a>
 
        </section>
     </main>
