--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="./imagens/icon-sedans.svg" alt="carro sedan">
         <h2>Sedans</h2>
         <p>Escolha um sedan pelo seu preço acessível e excelente economia de combustível. Ideal para dirigir na cidade ou na sua próxima viagem.</p>
-        <a href="">Ver mais</a>
+        <a href="https://www.webmotors.com.br/sedans" target="_blank">Ver mais</a>
         
 
        </section>
@@ -27,7 +27,7 @@
         <img src="./imagens/icon-suvs.svg" alt="carro suv">
         <h2>SUVs</h2>
         <p>Escolha um SUV pelo seu interior espaçoso, poder e versatilidade. Perfeito para passar as férias em família ou para aventuras off-road.</p>
-        <a href="">Ver mais</a>
+        <a href="https://www.webmotors.com.br/suvs" target="_blank">Ver mais</a>
 
        </section>
 
@@ -35,7 +35,7 @@
         <img src="./imagens/icon-luxury.svg" alt="carro de luxo">
         <h2>Luxuosos</h2>
         <p>Passeie nos melhores carros sem os preços exorbitantes. Desfrute do conforto aprimorado de um aluguel de luxo e chegue com estilo.</p>
-        <a href="">Ver mais</a>
+        <a href="https://www.webmotors.com.br/catalogo/carroceria/coupe/" target="_blank">Ver mais</a>
 
        </section>
     </main>
